# ShaderTest

./: Cargo.toml  Makefile.toml  NOTES.md  rename_shaders.bat
assets/shaders/: custom_material_chromatic_aberration.wgsl  lighting_pass.wgsl  material_lighting.wgsl  post_process_pass.wgsl
src/: audio.rs  camera.rs  delete_system.rs  lib.rs  lightplacing_system.rs  loading.rs  main.rs  map.rs  menu.rs  player.rs  ui.rs  wall.rs
src/actions/: mod.rs  tools.rs
src/bevy_webasset_plugin_mod/: custom_webasset_io.rs  custom_webasset_plugin.rs  mod.rs
src/communication/: communication_bridge.rs  interop.rs  messages.rs  mod.rs  plugin.rs
src/components/: deleteable.rs  mod.rs  raycast.rs
src/events/: mod.rs
src/lighting/: lighting_material_plugin.rs  lighting_plugin.rs  mod.rs  post_process_example.rs
src/lighting/components/: light_occluder.rs  light_source.rs  mod.rs
src/model/: light.rs  map.rs  mod.rs  wall.rs
src/shared_state/: mod.rs  shared_state.rs
