[package]
name = "bevy_game" # ToDo
version = "0.1.0"
publish = false
authors = ["Niklas Eicker <git@nikl.me>"] # ToDo: you are the author ;)
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = ["bevy/bevy_dylib"]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = ["bevy/animation", "bevy/bevy_asset", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_gltf", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/bevy_text", "bevy/bevy_ui", "bevy/png", "bevy/hdr", "bevy/zstd", "bevy/x11", "bevy/ktx2", "bevy/filesystem_watcher", "bevy/tonemapping_luts"]

[dependencies]
bevy = { version = "0.10", default-features = false }
bevy_kira_audio = { version = "0.15" }
bevy_asset_loader = { version = "0.15" }
rand = { version = "0.8.3" }
lazy_static = "1.4.0"
bevy_pancam = { version = "0.8" }
bevy_prototype_lyon = { version = "0.8.0" }
bevy_mod_raycast = {git = "https://github.com/soerenmeier/bevy_mod_raycast", branch="bevy-0.10"}
bevy_mod_picking = {git = "https://github.com/Fincap/bevy_mod_picking.git", branch="migrate-bevy-0.10.0"}

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }
bevy-inspector-egui = "0.18.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
futures = { version = "0.3.26", features = ["executor"] }
tokio = { version = "1.25.0", features = ["rt", "macros", "sync"] } 

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.surf]
version = "2.3"
features = ["h1-client-rustls"]
default-features = false


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[build-dependencies]
embed-resource = "1.4"
